[package]
name = "double-pendulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.17"
bevy_egui = "0.38"
bevy_vector_shapes = "0.11"
egui_plot = "0.34"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
